tests/ui/type-alias-impl-trait/lazy_subtyping_of_opaques.stderr
error[E0308]: mismatched types
  --> $DIR/lazy_subtyping_of_opaques.rs:10:23
   |
LL | type Tait = impl FnOnce() -> ();
   |             ------------------- the found opaque type
...
LL |     Thunk::new(|cont| cont)
   |                       ^^^^ expected `()`, found opaque type
   |
   = note: expected unit type `()`
            found opaque type `Tait`

error[E0308]: mismatched types
  --> $DIR/lazy_subtyping_of_opaques.rs:10:5
   |
LL | fn reify_as_tait() -> Thunk<Tait> {
   |                       ----------- expected `Thunk<_>` because of return type
LL |     Thunk::new(|cont| cont)
   |     ^^^^^^^^^^^^^^^^^^^^^^^ expected `Thunk<_>`, found `()`
   |
   = note: expected struct `Thunk<_>`
           found unit type `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
